final version of project.

--- a/Space travel project/final part one.html
+++ b/Space travel project/final part one.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>The Space Station | Resort</title>
-		<link rel="stylesheet" href="./css/shared.css">
-		<link rel="stylesheet" href="./css/animations.css">
+		<link rel="stylesheet" href="">
+		<link rel="stylesheet" href="">
 	</head>
 	<body>
 		<!-- NAV-->
@@ -172,7 +172,7 @@
 								<input class="rsvp" type="text" value="" placeholder="Phone Number">
 								<!-- the value "" allows them to type in their infor and it becomes the value-->
 									<div class="form-spacer">
-										<label class="terms">Terms and Conditions</label>
+										<label class="terms">Terms and Condiditons</label>
 									</div>
 									<div class="submit">
 										<input class="submit" value="Submit">
@@ -188,7 +188,6 @@
 		
 		<!-- Footer ---> <!-- can also use footer instead of div-->
 		<div id="footer">
-		www.thespacestation.space &nbsp;|&nbsp; &copy; 2017 <!-- &nbsp is how the browser recognizes a "space" and the &copy gives you the copywright symbol-->
 		</div>
 		<!-- End Footer-->
 	</body>
