--- a/Space travel project/index.html
+++ b/Space travel project/index.html
@@ -16,7 +16,7 @@
 				This means whatever has the id tag, go to it-->
 					<a href="#home"><li>Home</li>,</a> <!-- anchor tag-- with list name within-->
 					<a href="#gallery"><li>Gallery</li>,</a>
-					<a href="contact"><li>Reservations</li>,</a>
+					<a href="#contact"><li>Reservations</li>,</a>
 				</ul>
 			</div>
 		</div>
